--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "atomic-components",
+  "homepage": "https://likelion10-homework-react.netlify.app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
