--- a/04-todolist/package.json
+++ b/04-todolist/package.json
@@ -25,8 +25,11 @@
     "lint": "eslint \"./src/**\" --report-unused-disable-directives --ignore-pattern .gitignore"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
+    "pocketbase": "^0.21.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1"
   }
 }
